integrating with fiscal-data-js

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8' />
-    <base href='/' />
-    <meta http-equiv='x-ua-compatible' content='ie=edge' />
-    <meta name='description' content='A frontend data/views app powered directly from a Fiscal Data Package.' />
-    <meta name='viewport' content='width=device-width, initial-scale=1' />
+<head>
+    <meta charset='utf-8'/>
+    <base href='/'/>
+    <meta http-equiv='x-ua-compatible' content='ie=edge'/>
+    <meta name='description' content='A frontend data/views app powered directly from a Fiscal Data Package.'/>
+    <meta name='viewport' content='width=device-width, initial-scale=1'/>
     <title>Fiscal Data Package Viewer | Open Knowledge</title>
-    <link rel='apple-touch-icon' href='images/apple-touch-icon.png' />
+    <link rel='apple-touch-icon' href='images/apple-touch-icon.png'/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  </head>
-  <body>
-    <div id="application"></div>
-    <script src='/dist/bundle.js'></script>
-  </body>
+</head>
+<body>
+<div id="root">
+</div>
+<script src="/dist/bundle.js"></script>
+</body>
 </html>
