#12 Load data package only from URLs from list

--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'/>
-    <base href='/'/>
-    <meta http-equiv='x-ua-compatible' content='ie=edge'/>
-    <meta name='description' content='A frontend data/views app powered directly from a Fiscal Data Package.'/>
-    <meta name='viewport' content='width=device-width, initial-scale=1'/>
-    <title>Fiscal Data Package Viewer | Open Knowledge</title>
-    <link rel='apple-touch-icon' href='images/apple-touch-icon.png'/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <meta charset="utf-8"/>
+  <base href="/"/>
+  <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+  <meta name="description" content="A frontend data/views app powered directly from a Fiscal Data Package."/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Fiscal Data Package Viewer | Open Knowledge</title>
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
-<div id="root">
-</div>
-<script src="/dist/bundle.js"></script>
+  <div id="root"></div>
+  <script type="text/javascript">
+    var dataPackages = [
+      'https://raw.githubusercontent.com/os-data/boost-paraguay/master/datapackage.json',
+      'https://raw.githubusercontent.com/os-data/boost-rio-grande-do-sul-revenue/master/datapackage.json',
+      'https://raw.githubusercontent.com/openspending/fiscal-data-package-demos/master/boost-moldova/datapackage.json'
+    ];
+  </script>
+  <script src="/dist/bundle.js"></script>
 </body>
 </html>
