openspending/openspending#999 Update url when changing params; improve url creating in Share modal

--- a/app/front/scripts/directives/visualizations/template.html
+++ b/app/front/scripts/directives/visualizations/template.html
@@ -7,4 +7,4 @@
   <facts-visualization params="params"></facts-visualization>
 </div>
 
-<visualization-share-modal></visualization-share-modal>
+<visualization-share-modal params="params"></visualization-share-modal>
