--- a/app/front/scripts/directives/visualizations/pivottable/template.html
+++ b/app/front/scripts/directives/visualizations/pivottable/template.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12">
+<div class="col-xs-12" ng-if="!params.isEmbedded">
   <export-control
     target-selector="#babbage-pivot-table"
     file-name="{{ state.availablePackages.current }}"
