--- a/app/front/scripts/directives/visualizations/table/template.html
+++ b/app/front/scripts/directives/visualizations/table/template.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12">
+<div class="col-xs-12" ng-if="!params.isEmbedded">
   <sorting-control
     selected="params.orderBy"
     items="params.availableSoring">
