--- a/app/front/scripts/directives/package-selector/template.html
+++ b/app/front/scripts/directives/package-selector/template.html
@@ -9,7 +9,7 @@
       <li class="package-search-input pinned">
         <span>
           <input type="text" class="form-control"
-            placeholder="Search for data package"
+            placeholder="{{ 'Search for data package' | i18n }}"
             ng-model="filter">
         </span>
       </li>
