--- a/app/front/scripts/directives/sidebar/drilldown/template.html
+++ b/app/front/scripts/directives/sidebar/drilldown/template.html
@@ -1,2 +1,2 @@
-<strong>Hierarchies</strong>
+<strong>{{ 'Hierarchies' | i18n }}</strong>
 <sidebar-plain-list items="hierarchies" selected="selectedHierarchies" key="groups"></sidebar-plain-list>
