--- a/app/front/scripts/directives/sidebar/filters/template.html
+++ b/app/front/scripts/directives/sidebar/filters/template.html
@@ -1,5 +1,5 @@
 <hr>
-<strong>Filters</strong>
+<strong>{{  'Filters' | i18n }}</strong>
 <div>
   <div ng-repeat="hierarchy in hierarchies" class="x-hide-first-separator"
     ng-if="selectedHierarchies.indexOf(hierarchy.key) == -1">
