--- a/app/front/scripts/directives/sidebar/location/template.html
+++ b/app/front/scripts/directives/sidebar/location/template.html
@@ -1,5 +1,5 @@
-<strong>Location</strong>
+<strong>{{ 'Location' | i18n }}</strong>
 <div ng-repeat="hierarchy in hierarchies">
   <sidebar-list items="hierarchy.dimensions" selected="params.groups"
-    title="{{ hierarchy.label }}" key="groups"></sidebar-list>
+    title="{{ hierarchy.label | i18n }}" key="groups"></sidebar-list>
 </div>
