--- a/app/front/scripts/directives/sidebar/time-series/template.html
+++ b/app/front/scripts/directives/sidebar/time-series/template.html
@@ -1,5 +1,5 @@
-<strong>Series</strong>
+<strong>{{ 'Series' | i18n }}</strong>
 <div ng-repeat="hierarchy in hierarchies">
   <sidebar-list items="hierarchy.dimensions" selected="params.series"
-    title="{{ hierarchy.label }}" key="series"></sidebar-list>
+    title="{{ hierarchy.label | i18n }}" key="series"></sidebar-list>
 </div>
