--- a/app/front/scripts/directives/sidebar/measures/template.html
+++ b/app/front/scripts/directives/sidebar/measures/template.html
@@ -1,5 +1,5 @@
 <div ng-if="measures.length > 1">
-  <strong>Measures</strong>
+  <strong>{{ 'Measures' | i18n }}</strong>
   <div>
     <sidebar-plain-list items="measures" selected="params.measures"></sidebar-plain-list>
   </div>
