--- a/app/front/scripts/directives/sidebar/pivot-table/template.html
+++ b/app/front/scripts/directives/sidebar/pivot-table/template.html
@@ -1,4 +1,4 @@
-<strong>Rows</strong>
+<strong>{{ 'Rows' | i18n }}</strong>
 <div ng-repeat="hierarchy in rowHierarchies">
   <sidebar-list items="hierarchy.dimensions" selected="params.rows" key="rows"
     title="{{ hierarchy.label }}" can-clear="{{ params.rows.length > 1 ? 'on' : '' }}"></sidebar-list>
@@ -6,7 +6,7 @@
 
 <hr>
 
-<strong>Columns</strong>
+<strong>{{  'Columns' | i18n }}</strong>
 <div ng-repeat="hierarchy in columnHierarchies">
   <sidebar-list items="hierarchy.dimensions" selected="params.columns" key="columns"
     title="{{ hierarchy.label }}" can-clear="{{ params.columns.length > 1 ? 'yes' : '' }}"></sidebar-list>
