--- a/app/front/scripts/directives/visualizations/controls/export/template.html
+++ b/app/front/scripts/directives/visualizations/controls/export/template.html
@@ -1,3 +1,3 @@
 <button ng-click="exportData()" type="button" class="btn btn-default pull-left margin-bottom-16">
-  <i class="fa fa-download margin-right-4"></i>Download as CSV
+  <i class="fa fa-download margin-right-4"></i>{{ 'Download as CSV' | i18n }}
 </button>
