openspending/openspending#1010 Add sankey diagram

--- a/app/front/scripts/directives/visualizations/visualization-container/template.html
+++ b/app/front/scripts/directives/visualizations/visualization-container/template.html
@@ -3,6 +3,7 @@
     <treemap-visualization ng-switch-when="Treemap" params="params"></treemap-visualization>
     <pie-chart-visualization ng-switch-when="PieChart" params="params"></pie-chart-visualization>
     <bar-chart-visualization ng-switch-when="BarChart" params="params"></bar-chart-visualization>
+    <sankey-visualization ng-switch-when="Sankey" params="params"></sankey-visualization>
     <line-chart-visualization ng-switch-when="LineChart" params="params"></line-chart-visualization>
     <table-visualization ng-switch-when="Table" params="params"></table-visualization>
     <bubble-tree-visualization ng-switch-when="BubbleTree" params="params"></bubble-tree-visualization>
