openspending/openspending#1061 Share query cache with babbage.ui library

--- a/app/front/scripts/directives/visualizations/barchart/template.html
+++ b/app/front/scripts/directives/visualizations/barchart/template.html
@@ -6,6 +6,7 @@
 </div>
 <div class="x-visualization-chart col-xs-12">
   <chart ng-if="isVisible"
+    downloader="downloader"
     type="bar"
     cube="{{ params.packageId }}"
     state="state"
