--- a/app/front/scripts/directives/visualizations/facts/template.html
+++ b/app/front/scripts/directives/visualizations/facts/template.html
@@ -1,4 +1,5 @@
 <facts ng-if="isVisible"
+  downloader="downloader"
   cube="{{ params.packageId }}"
   state="state"
   endpoint="{{ params.babbageApiUrl }}">
