--- a/app/front/scripts/directives/visualizations/linechart/template.html
+++ b/app/front/scripts/directives/visualizations/linechart/template.html
@@ -1,5 +1,6 @@
 <div class="x-visualization-chart col-xs-12">
   <chart ng-if="isVisible"
+    downloader="downloader"
     type="line"
     cube="{{ params.packageId }}"
     state="state"
