--- a/app/front/scripts/directives/visualizations/piechart/template.html
+++ b/app/front/scripts/directives/visualizations/piechart/template.html
@@ -1,5 +1,6 @@
 <div class="x-visualization-chart col-xs-12">
   <pie-chart ng-if="isVisible"
+    downloader="downloader"
     cube="{{ params.packageId }}"
     state="state"
     endpoint="{{ params.babbageApiUrl }}">
