--- a/app/front/scripts/directives/visualizations/pivottable/template.html
+++ b/app/front/scripts/directives/visualizations/pivottable/template.html
@@ -7,6 +7,7 @@
 <div class="x-visualization-chart col-xs-12">
   <div class="table-responsive">
     <pivot-table ng-if="isVisible" id="babbage-pivot-table"
+      downloader="downloader"
       cube="{{ params.packageId }}"
       state="state"
       endpoint="{{ params.babbageApiUrl }}">
