openspending/openspending#997 Add multiple filter values support

--- a/app/front/scripts/directives/filter-list/template.html
+++ b/app/front/scripts/directives/filter-list/template.html
@@ -1,7 +1,7 @@
 <div class="x-filtered-by" ng-if="filters.length > 0">
   <strong>{{ 'Filtered by' | i18n }}</strong>
   <span class="x-single-filter" ng-repeat="filter in filters">
-      {{ filter.dimensionLabel }}: {{ filter.valueLabel }}
+      {{ filter.dimensionLabel }}: {{ filter.valueLabel | join:', ' }}
       <i class="glyphicon glyphicon-remove-circle" ng-click="clearFilter(filter.dimensionKey)"></i>
   </span>
 </div>
