--- a/app/front/scripts/directives/sidebar/filters/template.html
+++ b/app/front/scripts/directives/sidebar/filters/template.html
@@ -5,7 +5,7 @@
     ng-if="selectedHierarchies.indexOf(hierarchy.key) == -1">
     <hr>
     <div ng-repeat="filter in hierarchy.dimensions">
-      <sidebar-list items="filter.values" selected="[params.filters[filter.key]]"
+      <sidebar-list items="filter.values" selected="params.filters[filter.key]"
         key="{{ filter.key }}" title="{{ filter.label }}" can-clear="yes" max-items="10"></sidebar-list>
     </div>
   </div>
