--- a/app/front/scripts/directives/visualizations/visualization-container/template.html
+++ b/app/front/scripts/directives/visualizations/visualization-container/template.html
@@ -9,6 +9,7 @@
     <bubble-tree-visualization ng-switch-when="BubbleTree" params="params"></bubble-tree-visualization>
     <map-visualization ng-switch-when="Map" params="params"></map-visualization>
     <pivot-table-visualization ng-switch-when="PivotTable" params="params"></pivot-table-visualization>
+    <radar-chart-visualization ng-switch-when="Radar" params="params"></radar-chart-visualization>
     <div class="x-visualization-info col-sm-3 hidden-xs">
       <h3>{{ visualization.name }}</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
