openspending/openspending#1084 Add styles for alerts in babbage.ui

--- a/app/front/scripts/directives/filter-list/template.html
+++ b/app/front/scripts/directives/filter-list/template.html
@@ -2,6 +2,6 @@
   <strong>{{ 'Filtered by' | i18n }}</strong>
   <span class="x-single-filter" ng-repeat="filter in filters">
       {{ filter.dimensionLabel }}: {{ filter.valueLabel | join:', ' }}
-      <i class="glyphicon glyphicon-remove-circle" ng-click="clearFilter(filter.dimensionKey)"></i>
+      <i class="os-icon os-icon-remove" ng-click="clearFilter(filter.dimensionKey)"></i>
   </span>
 </div>
