--- a/app/front/scripts/directives/sidebar/sidebar-list/template.html
+++ b/app/front/scripts/directives/sidebar/sidebar-list/template.html
@@ -1,4 +1,5 @@
 <div ng-init="list.isCollapsed = true">
+  <div ng-if="isAnyItemSelected && items.length && selected.length" ng-init="list.isCollapsed = !isAnyItemSelected()"></div>
   <div class="list-group list-group-inverse">
     <a ng-click="list.isCollapsed = !list.isCollapsed" href="javascript:void(0);" class="list-group-item">
       <i class="os-icon os-icon-filter"></i>
