Hierarchy aware filter (#136)
* openspending/openspending#1116 Hierarchy aware filter

* Added explicit dependency (lodash)

* CR

* Removed postinstall script (do not use legacy bundling with npm 3\!)

--- a/app/front/scripts/directives/sidebar/filters/template.html
+++ b/app/front/scripts/directives/sidebar/filters/template.html
@@ -4,7 +4,7 @@
   <div ng-repeat="hierarchy in hierarchies" class="x-hide-first-separator"
     ng-if="selectedHierarchies.indexOf(hierarchy.key) == -1">
     <hr>
-    <div ng-repeat="filter in hierarchy.dimensions">
+    <div ng-repeat="filter in hierarchy.dimensions" ng-if="((filter.values.length > 1) || !$last) && ($index <= lastFilterIndex[hierarchy.key] + 1)">
       <sidebar-list items="filter.values" selected="params.filters[filter.key]"
         key="{{ filter.key }}" title="{{ filter.label }}" can-clear="yes" max-items="10"></sidebar-list>
     </div>
