openspending/openspending#1115 Limit possible dimensions based on value count

--- a/app/front/scripts/directives/sidebar/drilldown/template.html
+++ b/app/front/scripts/directives/sidebar/drilldown/template.html
@@ -1,2 +1,4 @@
 <strong>{{ 'Hierarchies' | i18n }}</strong>
 <sidebar-plain-list items="hierarchies" selected="selectedHierarchies" key="groups"></sidebar-plain-list>
+
+<sidebar-filters hierarchies="hierarchies" params="params"></sidebar-filters>
