--- a/app/front/scripts/directives/sidebar/pivot-table/template.html
+++ b/app/front/scripts/directives/sidebar/pivot-table/template.html
@@ -11,3 +11,5 @@
   <sidebar-list items="hierarchy.dimensions" selected="params.columns" key="columns"
     title="{{ hierarchy.label }}" can-clear="{{ params.columns.length > 1 ? 'yes' : '' }}"></sidebar-list>
 </div>
+
+<sidebar-filters hierarchies="rowHierarchies" params="params"></sidebar-filters>
