--- a/app/front/scripts/directives/sidebar/sortable-series/template.html
+++ b/app/front/scripts/directives/sidebar/sortable-series/template.html
@@ -10,3 +10,5 @@
   <sidebar-list items="hierarchy.dimensions" selected="params.series"
     title="{{ hierarchy.label | i18n }}" can-clear="yes" key="series"></sidebar-list>
 </div>
+
+<sidebar-filters hierarchies="hierarchies" params="params"></sidebar-filters>
