--- a/app/front/scripts/directives/sidebar/time-series/template.html
+++ b/app/front/scripts/directives/sidebar/time-series/template.html
@@ -3,3 +3,5 @@
   <sidebar-list items="hierarchy.dimensions" selected="params.series"
     title="{{ hierarchy.label | i18n }}" key="series"></sidebar-list>
 </div>
+
+<sidebar-filters hierarchies="hierarchies" params="params"></sidebar-filters>
