--- a/app/front/scripts/directives/sidebar/filters/template.html
+++ b/app/front/scripts/directives/sidebar/filters/template.html
@@ -1,4 +1,4 @@
-<div ng-if="hierarchies.length > 0">
+<div ng-if="hierarchies.length > 0" class="x-sidebar-filters">
   <hr>
   <strong>{{  'Filters' | i18n }}</strong>
   <div>
@@ -10,5 +10,9 @@
           key="{{ filter.key }}" title="{{ filter.label }}" can-clear="yes" max-items="10"></sidebar-list>
       </div>
     </div>
+  </div>
+  <div ng-if="params.isFiltersUpdating" class="x-update-filters-waiter">
+    <i class="fa fa-spinner fa-pulse"></i>
+    <span>Updating filters...</span>
   </div>
 </div>
