--- a/app/front/scripts/directives/sidebar/filters/template.html
+++ b/app/front/scripts/directives/sidebar/filters/template.html
@@ -4,8 +4,9 @@
   <div>
     <div ng-repeat="hierarchy in hierarchies" class="x-hide-first-separator"
       ng-if="selectedHierarchies.indexOf(hierarchy.key) == -1">
-      <hr>
-      <div ng-repeat="filter in hierarchy.dimensions" ng-if="((filter.values.length > 1) || !$last) && ($index <= lastFilterIndex[hierarchy.key] + 1)">
+      <div ng-repeat="filter in hierarchy.dimensions"
+        ng-if="((filter.values.length > 1) || !$last || (params.filters[filter.key].length > 0)) && ($index <= lastFilterIndex[hierarchy.key] + 1)">
+        <hr>
         <sidebar-list items="filter.values" selected="params.filters[filter.key]"
           key="{{ filter.key }}" title="{{ filter.label }}" can-clear="yes" max-items="10"></sidebar-list>
       </div>
