openspending/openspending#1036 Pie Chart drilldown and value formatting

--- a/app/front/scripts/directives/visualizations/piechart/template.html
+++ b/app/front/scripts/directives/visualizations/piechart/template.html
@@ -1,3 +1,6 @@
+<div class="col-xs-12">
+  <breadcrumbs breadcrumbs="params.breadcrumbs"></breadcrumbs>
+</div>
 <div class="x-visualization-chart col-xs-12">
   <pie-chart ng-if="isVisible"
     downloader="downloader"
