openspending/openspending#1133 Improve value formatting

--- a/app/front/scripts/directives/visualizations/barchart/template.html
+++ b/app/front/scripts/directives/visualizations/barchart/template.html
@@ -10,6 +10,7 @@
     type="bar"
     cube="{{ params.packageId }}"
     state="state"
+    format-value="formatValue"
     endpoint="{{ params.babbageApiUrl }}">
   </chart>
 </div>
