--- a/app/front/scripts/directives/visualizations/linechart/template.html
+++ b/app/front/scripts/directives/visualizations/linechart/template.html
@@ -4,6 +4,7 @@
     type="line"
     cube="{{ params.packageId }}"
     state="state"
+    format-value="formatValue"
     endpoint="{{ params.babbageApiUrl }}">
   </chart>
 </div>
