--- a/app/front/scripts/directives/visualizations/map/template.html
+++ b/app/front/scripts/directives/visualizations/map/template.html
@@ -3,6 +3,7 @@
     downloader="downloader"
     cube="{{ params.packageId }}"
     state="state"
+    format-value="formatValue"
     endpoint="{{ params.babbageApiUrl }}"
     cosmo-endpoint="{{ params.cosmopolitanApiUrl }}"
     currency-sign="{{ params.currencySign }}"
