--- a/app/front/scripts/directives/visualizations/piechart/template.html
+++ b/app/front/scripts/directives/visualizations/piechart/template.html
@@ -6,6 +6,7 @@
     downloader="downloader"
     cube="{{ params.packageId }}"
     state="state"
+    format-value="formatValue"
     endpoint="{{ params.babbageApiUrl }}">
   </pie-chart>
 </div>
