--- a/app/front/scripts/directives/visualizations/radar/template.html
+++ b/app/front/scripts/directives/visualizations/radar/template.html
@@ -10,6 +10,7 @@
       downloader="downloader"
       cube="{{ params.packageId }}"
       state="state"
+      format-value="formatValue"
       endpoint="{{ params.babbageApiUrl }}">
     </radar-chart>
   </div>
