--- a/app/front/scripts/directives/visualizations/table/template.html
+++ b/app/front/scripts/directives/visualizations/table/template.html
@@ -9,6 +9,7 @@
     downloader="downloader"
     cube="{{ params.packageId }}"
     state="state"
+    format-value="formatValue"
     endpoint="{{ params.babbageApiUrl }}">
   </babbage-table>
 </div>
