--- a/app/front/scripts/directives/visualizations/facts/template.html
+++ b/app/front/scripts/directives/visualizations/facts/template.html
@@ -2,5 +2,6 @@
   downloader="downloader"
   cube="{{ params.packageId }}"
   state="state"
+  format-value="formatValue"
   endpoint="{{ params.babbageApiUrl }}">
 </facts>
