openspending/openspending#1099 Do not show all packages in Search packages dropdown

--- a/app/front/scripts/directives/package-selector/template.html
+++ b/app/front/scripts/directives/package-selector/template.html
@@ -1,4 +1,4 @@
-<div class="row x-available-packages">
+<div class="row x-available-packages" ng-class="{readonly: readOnly}">
   <div class="col-xs-12 dropdown" ng-class="{open: dropdownState.isOpen}">
     <h3 ng-click="dropdownState.isOpen = !dropdownState.isOpen">
       <i class="os-icon os-icon-box"></i>
