--- a/app/front/scripts/directives/visualizations/pivottable/template.html
+++ b/app/front/scripts/directives/visualizations/pivottable/template.html
@@ -11,6 +11,13 @@
       cube="{{ params.packageId }}"
       state="state"
       format-value="formatValue"
+      max-value-limit="1998"
+      max-value-message="{{ [
+          '<strong>Oh snap!</strong>',
+          'The query returns too much data and can\'t be displayed in the table.',
+          'Try the DataMine instead or another query.'
+        ] | join:' ' | i18n
+      }}"
       endpoint="{{ params.babbageApiUrl }}">
     </pivot-table>
   </div>
