Show message if there are too much data (#145)
* openspending/openspending#1018 Pivot Table: show message if there are too much data

* Improve localization-related code

--- a/app/front/scripts/directives/visualizations/pivottable/template.html
+++ b/app/front/scripts/directives/visualizations/pivottable/template.html
@@ -11,6 +11,8 @@
       cube="{{ params.packageId }}"
       state="state"
       format-value="formatValue"
+      max-value-limit="1998"
+      max-value-message="{{ 'Too much data error message' | i18n }}"
       endpoint="{{ params.babbageApiUrl }}">
     </pivot-table>
   </div>
